Remove edit hints and instructions from index.html
Removed edit hints and instructions from the HTML.

--- a/index.html
+++ b/index.html
@@ -283,18 +283,6 @@
       margin: 0.8rem 0 0.2rem;
     }
 
-    /* edit hint — for you to know where to add */
-    .edit-note {
-      background: #fcf2dd;
-      border-radius: 1rem;
-      padding: 0.6rem 1.5rem;
-      margin: 1rem 0 2rem;
-      font-size: 1.1rem;
-      color: #594521;
-      display: inline-block;
-      border-left: 6px solid #c9a03d;
-    }
-
     /* footer contact */
     .footer {
       margin-top: 4rem;
@@ -453,15 +441,11 @@
       </div>
     </details>
 
-    <!-- instructions for you (light hint) -->
-    <div class="edit-note">
-      ✏️ <strong>how to edit:</strong> to add/edit properties, just change the text inside each .unit-card. To add a new dropdown, copy/paste a whole &lt;details&gt; block.
-    </div>
   </section>
 
   <!-- Quick contact reminder -->
   <div style="background: white; border-radius: 2rem; padding: 2rem; margin: 2rem 0;">
-    <p style="font-size: 1.8rem; color: #003153;">📞 listing inquiry?<br> <span style="font-size: 1.4rem; font-weight: 400;">reach us at <strong>info.coastocoastcommercial@gmail.com</strong> — we’ll connect you with the right contact.</span></p>
+    <p style="font-size: 1.8rem; color: #003153;">📞 listing inquiry?<br> <span style="font-size: 1.4rem; font-weight: 400;">reach us at <strong>info.coastocoastcommercial@gmail.com</strong> — we'll connect you with the right contact.</span></p>
   </div>
 </main>
 
@@ -482,6 +466,6 @@
 </footer>
 
 <!-- tiny note: replace the QR mock with your actual QR image (for business cards) -->
-<!-- simply get a real QR code for https://ms7861.github.io and set as background -->
+<!-- simply get a real QR code for https://ms7861.github.io/Ms786.github.io/ and set as background -->
 </body>
 </html>
