--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
   <title>Coast to Coast Commercial · properties</title>
-  <!-- modern, professional feel -->
   <style>
     * {
       margin: 0;
@@ -13,81 +12,118 @@
     }
 
     body {
-      font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
       background: #f4f6fa;
       color: #1e2b37;
       line-height: 1.5;
     }
 
-    /* smooth container */
+    /* container with better mobile padding */
     .container {
+      width: 100%;
       max-width: 1300px;
       margin: 0 auto;
-      padding: 0 2rem;
+      padding: 0 1rem;
     }
 
-    /* header – deep navy, professional */
+    @media (min-width: 768px) {
+      .container {
+        padding: 0 2rem;
+      }
+    }
+
+    /* header – stacked on mobile */
     .site-header {
       background: #0b2a3e;
       color: white;
-      padding: 1.2rem 0;
-      border-bottom: 5px solid #c9a03d;
-      box-shadow: 0 6px 14px rgba(0,20,30,0.1);
+      padding: 1rem 0;
+      border-bottom: 4px solid #c9a03d;
     }
 
     .header-flex {
       display: flex;
+      flex-direction: column;
       align-items: center;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      gap: 1rem;
+      text-align: center;
+      gap: 0.8rem;
+    }
+
+    @media (min-width: 768px) {
+      .header-flex {
+        flex-direction: row;
+        justify-content: space-between;
+        text-align: left;
+      }
     }
 
     .logo h1 {
-      font-size: 2.2rem;
+      font-size: 1.8rem;
       font-weight: 600;
-      letter-spacing: -0.02em;
       line-height: 1.2;
+    }
+
+    @media (min-width: 768px) {
+      .logo h1 {
+        font-size: 2.2rem;
+      }
     }
 
     .logo span {
       display: block;
-      font-size: 1rem;
-      font-weight: 400;
+      font-size: 0.9rem;
       color: #d4b95a;
-      letter-spacing: 1px;
     }
 
     .contact-header {
       background: #1f4b66;
-      padding: 0.7rem 1.8rem;
+      padding: 0.6rem 1.2rem;
       border-radius: 40px;
-      font-size: 1.1rem;
-      font-weight: 500;
-      box-shadow: inset 0 0 0 1px #5790b0;
+      font-size: 1rem;
+      width: 100%;
+      max-width: 350px;
+      margin: 0 auto;
+    }
+
+    @media (min-width: 768px) {
+      .contact-header {
+        width: auto;
+        margin: 0;
+      }
     }
 
     .contact-header a {
       color: white;
       text-decoration: none;
-      border-bottom: 1px dotted #b0d0e0;
+      word-break: break-all;
     }
 
-    /* main message */
+    /* hero */
     .hero {
       background: white;
-      margin: 2.5rem 0 2rem;
-      padding: 2.5rem 2.8rem;
-      border-radius: 32px;
-      box-shadow: 0 16px 32px -12px rgba(0,35,60,0.15);
-      border: 1px solid #e2edf5;
+      margin: 1.5rem 0;
+      padding: 1.8rem 1.5rem;
+      border-radius: 24px;
+      box-shadow: 0 8px 20px -10px rgba(0,35,60,0.15);
+    }
+
+    @media (min-width: 768px) {
+      .hero {
+        margin: 2.5rem 0 2rem;
+        padding: 2.5rem 2.8rem;
+        border-radius: 32px;
+      }
     }
 
     .hero h2 {
-      font-size: 2.8rem;
+      font-size: 1.8rem;
       font-weight: 500;
       color: #0b2a3e;
-      max-width: 900px;
+    }
+
+    @media (min-width: 768px) {
+      .hero h2 {
+        font-size: 2.8rem;
+      }
     }
 
     .hero h2 strong {
@@ -96,50 +132,69 @@
     }
 
     .hero p {
-      font-size: 1.3rem;
+      font-size: 1.1rem;
       color: #2f4858;
-      margin: 1.2rem 0 1.5rem;
+      margin: 1rem 0 0;
     }
 
-    /* qr code card — business card ready */
+    @media (min-width: 768px) {
+      .hero p {
+        font-size: 1.3rem;
+      }
+    }
+
+    /* qr section - stacks on mobile */
     .qr-section {
-      background: #ffffffec;
-      backdrop-filter: blur(4px);
-      border-radius: 2rem;
-      padding: 2rem 2.5rem;
-      margin: 2.2rem 0 2.8rem;
+      background: white;
+      border-radius: 24px;
+      padding: 1.8rem 1.5rem;
+      margin: 1.5rem 0;
       display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      gap: 2.5rem;
+      flex-direction: column;
+      gap: 1.5rem;
       border: 2px solid #c9a03d40;
-      box-shadow: 0 20px 30px -18px #1b3e55;
+    }
+
+    @media (min-width: 768px) {
+      .qr-section {
+        flex-direction: row;
+        align-items: center;
+        padding: 2rem 2.5rem;
+        gap: 2.5rem;
+      }
     }
 
     .qr-left {
       flex: 1;
-      min-width: 240px;
     }
 
     .qr-left h3 {
-      font-size: 1.9rem;
-      font-weight: 550;
+      font-size: 1.6rem;
       color: #003153;
+      margin-bottom: 0.5rem;
     }
 
     .qr-left p {
-      font-size: 1.2rem;
-      margin: 0.5rem 0 0.3rem;
+      font-size: 1rem;
+      margin-bottom: 1rem;
     }
 
     .qr-email {
       background: #eef3f7;
-      padding: 0.7rem 1.5rem;
+      padding: 0.7rem 1.2rem;
       border-radius: 60px;
       display: inline-block;
-      font-size: 1.2rem;
-      font-weight: 500;
-      border: 1px solid #b8cdde;
+      font-size: 0.95rem;
+      word-break: break-all;
+      width: 100%;
+      text-align: center;
+    }
+
+    @media (min-width: 768px) {
+      .qr-email {
+        width: auto;
+        text-align: left;
+      }
     }
 
     .qr-email a {
@@ -147,7 +202,7 @@
       color: #0a3144;
     }
 
-    /* QR code mock (pure CSS with dummy pattern — replace with actual QR image) */
+    /* QR code - centered on mobile */
     .qr-code-mock {
       width: 140px;
       height: 140px;
@@ -156,9 +211,15 @@
       align-items: center;
       justify-content: center;
       border-radius: 24px;
-      box-shadow: 0 10px 16px rgba(0,0,0,0.2);
+      margin: 0 auto;
       border: 4px solid white;
       outline: 2px solid #c9a03d;
+    }
+
+    @media (min-width: 768px) {
+      .qr-code-mock {
+        margin: 0;
+      }
     }
 
     .qr-inner {
@@ -169,157 +230,281 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      font-weight: bold;
       font-size: 0.8rem;
       color: #222;
       text-align: center;
-      background-clip: border-box;
-    }
-    /* instruction overlay — replace with real QR code image later */
-    .qr-note {
-      font-size: 0.9rem;
-      color: #b8862c;
-      margin-top: 0.6rem;
-      font-weight: 500;
     }
 
-    /* property sections – dropdown style cards */
+    .qr-note {
+      font-size: 0.85rem;
+      color: #b8862c;
+      margin-top: 0.8rem;
+      text-align: center;
+    }
+
+    @media (min-width: 768px) {
+      .qr-note {
+        text-align: left;
+      }
+    }
+
+    /* property sections */
     .listings-section {
-      margin: 3rem 0 2rem;
+      margin: 2rem 0;
     }
 
     .section-title {
-      font-size: 2.2rem;
+      font-size: 1.8rem;
       font-weight: 560;
       color: #0b2a3e;
-      border-left: 8px solid #c9a03d;
-      padding-left: 1.5rem;
-      margin-bottom: 1.8rem;
+      border-left: 6px solid #c9a03d;
+      padding-left: 1rem;
+      margin-bottom: 1.2rem;
     }
 
-    /* dropdown (details/summary) styled as cards */
+    @media (min-width: 768px) {
+      .section-title {
+        font-size: 2.2rem;
+        border-left: 8px solid #c9a03d;
+        padding-left: 1.5rem;
+      }
+    }
+
+    /* dropdown styling */
     .property-group {
       background: white;
-      border-radius: 24px;
-      margin-bottom: 1.5rem;
-      box-shadow: 0 8px 18px -10px #213e5040;
+      border-radius: 20px;
+      margin-bottom: 1rem;
       border: 1px solid #dbeaf2;
-      transition: 0.2s;
     }
 
     .property-group summary {
-      padding: 1.5rem 2rem;
-      font-size: 1.8rem;
+      padding: 1.2rem 1.2rem;
+      font-size: 1.4rem;
       font-weight: 520;
       cursor: pointer;
-      list-style: none;  /* removes default triangle */
+      list-style: none;
       display: flex;
       align-items: center;
       justify-content: space-between;
-      color: #003557;
+    }
+
+    @media (min-width: 768px) {
+      .property-group summary {
+        padding: 1.5rem 2rem;
+        font-size: 1.8rem;
+      }
     }
 
     .property-group summary::-webkit-details-marker {
-      display: none;  /* hide default triangle in webkit */
+      display: none;
     }
 
     .property-group summary::after {
       content: "➕";
-      font-size: 1.8rem;
+      font-size: 1.4rem;
       color: #c49b3f;
-      transition: 0.2s;
+    }
+
+    @media (min-width: 768px) {
+      .property-group summary::after {
+        font-size: 1.8rem;
+      }
     }
 
     .property-group[open] summary::after {
       content: "➖";
     }
 
-    /* inner content grid — cards for units */
+    /* property cards - 1 column on mobile, grid on desktop */
     .property-details {
-      padding: 0.5rem 2rem 2rem 2rem;
+      padding: 0.5rem 1rem 1.5rem 1rem;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 1.5rem;
+      grid-template-columns: 1fr;
+      gap: 1rem;
       border-top: 1px solid #c9dae9;
+    }
+
+    @media (min-width: 640px) {
+      .property-details {
+        grid-template-columns: repeat(2, 1fr);
+        padding: 0.5rem 1.5rem 2rem 1.5rem;
+      }
+    }
+
+    @media (min-width: 1024px) {
+      .property-details {
+        grid-template-columns: repeat(3, 1fr);
+      }
     }
 
     .unit-card {
       background: #f5faff;
-      border-radius: 1.5rem;
-      padding: 1.5rem;
-      border-left: 6px solid #c9a03d;
-      box-shadow: 0 4px 10px #d7e2ed;
+      border-radius: 1.2rem;
+      padding: 1.2rem;
+      border-left: 5px solid #c9a03d;
+    }
+
+    @media (min-width: 768px) {
+      .unit-card {
+        padding: 1.5rem;
+      }
     }
 
     .unit-card h4 {
-      font-size: 1.6rem;
+      font-size: 1.4rem;
       font-weight: 600;
       color: #1d4357;
-      margin-bottom: 0.5rem;
+      margin-bottom: 0.3rem;
+    }
+
+    @media (min-width: 768px) {
+      .unit-card h4 {
+        font-size: 1.6rem;
+      }
     }
 
     .unit-card .type {
       display: inline-block;
       background: #c9a03d;
       color: white;
-      padding: 0.2rem 1.2rem;
+      padding: 0.2rem 1rem;
       border-radius: 30px;
-      font-weight: 500;
-      font-size: 0.9rem;
-      letter-spacing: 0.5px;
-      margin-bottom: 1rem;
+      font-size: 0.8rem;
+      margin-bottom: 0.8rem;
     }
 
     .unit-card p {
-      font-size: 1.1rem;
+      font-size: 0.95rem;
       margin: 0.3rem 0;
-      color: #1e3f50;
+      display: flex;
+      align-items: center;
+      gap: 0.3rem;
+      flex-wrap: wrap;
+    }
+
+    @media (min-width: 768px) {
+      .unit-card p {
+        font-size: 1.1rem;
+      }
     }
 
     .unit-card .price {
-      font-size: 1.6rem;
+      font-size: 1.4rem;
       font-weight: 600;
       color: #0b2a3e;
-      margin: 0.8rem 0 0.2rem;
+      margin: 0.8rem 0 0;
     }
 
-    /* footer contact */
+    @media (min-width: 768px) {
+      .unit-card .price {
+        font-size: 1.6rem;
+      }
+    }
+
+    /* contact section */
+    .contact-card {
+      background: white;
+      border-radius: 20px;
+      padding: 1.8rem 1.5rem;
+      margin: 2rem 0;
+    }
+
+    @media (min-width: 768px) {
+      .contact-card {
+        border-radius: 2rem;
+        padding: 2rem;
+      }
+    }
+
+    .contact-card p {
+      font-size: 1.4rem;
+      color: #003153;
+      margin-bottom: 1rem;
+    }
+
+    @media (min-width: 768px) {
+      .contact-card p {
+        font-size: 1.8rem;
+      }
+    }
+
+    .contact-card strong {
+      word-break: break-all;
+      font-size: 1.2rem;
+    }
+
+    @media (min-width: 768px) {
+      .contact-card strong {
+        font-size: 1.4rem;
+      }
+    }
+
+    /* footer */
     .footer {
-      margin-top: 4rem;
+      margin-top: 3rem;
       background: #0f2d3f;
       color: #e3eef5;
-      padding: 2rem 0;
-      border-radius: 3rem 3rem 0 0;
+      padding: 1.8rem 0;
+      border-radius: 2rem 2rem 0 0;
     }
 
     .footer-inner {
       display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
+      flex-direction: column;
       align-items: center;
+      text-align: center;
+      gap: 1rem;
+    }
+
+    @media (min-width: 768px) {
+      .footer-inner {
+        flex-direction: row;
+        justify-content: space-between;
+        text-align: left;
+      }
     }
 
     .footer-email {
-      font-size: 1.4rem;
-      font-weight: 500;
+      font-size: 1.1rem;
+      word-break: break-all;
+    }
+
+    @media (min-width: 768px) {
+      .footer-email {
+        font-size: 1.4rem;
+      }
     }
 
     .footer-email a {
       color: #ffdc9f;
       text-decoration: none;
-      border-bottom: 2px solid #c9a03d;
+    }
+
+    .footer-links {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1.2rem;
     }
 
     .footer-links a {
       color: #bed9ec;
-      margin-left: 2rem;
       text-decoration: none;
+      font-size: 1rem;
     }
 
-    @media (max-width: 650px) {
-      .container { padding: 0 1.2rem; }
-      .hero h2 { font-size: 2rem; }
-      .qr-section { flex-direction: column; align-items: start; }
+    @media (min-width: 768px) {
+      .footer-links a {
+        margin-left: 2rem;
+      }
+    }
+
+    .copyright {
+      margin-top: 1.5rem;
+      font-size: 0.85rem;
+      opacity: 0.8;
+      text-align: center;
     }
   </style>
 </head>
@@ -338,13 +523,11 @@
 
 <main class="container">
   
-  <!-- Hero / value prop -->
   <div class="hero">
     <h2>Advertise & manage <strong>commercial properties</strong> — for sale, lease, or management.</h2>
     <p>Brokers, landlords, and companies list with us. Clean, professional, and built for growth.</p>
   </div>
 
-  <!-- QR code block – for business cards (scan to website) -->
   <div class="qr-section">
     <div class="qr-left">
       <h3>📱 scan for instant access</h3>
@@ -352,22 +535,18 @@
       <div class="qr-email">
         <a href="mailto:info.coastocoastcommercial@gmail.com">📧 info.coastocoastcommercial@gmail.com</a>
       </div>
-      <div class="qr-note">(replace mock QR with your actual code image)</div>
     </div>
     <div class="qr-code-mock">
       <div class="qr-inner">YOUR<br>QR<br>CODE</div>
     </div>
   </div>
 
-  <!-- ===== DROPDOWN SECTIONS – edit properties here ===== -->
   <section class="listings-section">
     <h2 class="section-title">📌 current listings</h2>
 
-    <!-- UNITS FOR SALE dropdown -->
     <details class="property-group" open>
       <summary>🏢 units for sale</summary>
       <div class="property-details">
-        <!-- each card = one property – duplicate or edit as needed -->
         <div class="unit-card">
           <h4>Downtown office</h4>
           <span class="type">for sale</span>
@@ -392,7 +571,6 @@
       </div>
     </details>
 
-    <!-- UNITS FOR RENT dropdown -->
     <details class="property-group" open>
       <summary>🔑 units for rent / lease</summary>
       <div class="property-details">
@@ -420,7 +598,6 @@
       </div>
     </details>
 
-    <!-- ADDITIONAL CATEGORY (example: parking / land) — you can copy, rename, or add more -->
     <details class="property-group">
       <summary>📋 other availabilities</summary>
       <div class="property-details">
@@ -440,32 +617,31 @@
         </div>
       </div>
     </details>
-
   </section>
 
-  <!-- Quick contact reminder -->
-  <div style="background: white; border-radius: 2rem; padding: 2rem; margin: 2rem 0;">
-    <p style="font-size: 1.8rem; color: #003153;">📞 listing inquiry?<br> <span style="font-size: 1.4rem; font-weight: 400;">reach us at <strong>info.coastocoastcommercial@gmail.com</strong> — we'll connect you with the right contact.</span></p>
+  <div class="contact-card">
+    <p>📞 listing inquiry?</p>
+    <p style="font-size: 1.2rem;">reach us at <br><strong>info.coastocoastcommercial@gmail.com</strong><br> — we'll connect you with the right contact.</p>
   </div>
 </main>
 
 <footer class="footer">
-  <div class="container footer-inner">
-    <div class="footer-email">
-      <a href="mailto:info.coastocoastcommercial@gmail.com">info.coastocoastcommercial@gmail.com</a>
+  <div class="container">
+    <div class="footer-inner">
+      <div class="footer-email">
+        <a href="mailto:info.coastocoastcommercial@gmail.com">info.coastocoastcommercial@gmail.com</a>
+      </div>
+      <div class="footer-links">
+        <a href="#">list a property</a>
+        <a href="#">management</a>
+        <a href="#">scan QR</a>
+      </div>
     </div>
-    <div class="footer-links">
-      <a href="#">list a property</a>
-      <a href="#">management</a>
-      <a href="#">scan QR</a>
+    <div class="copyright">
+      © coast to coast commercial — professional real estate services
     </div>
-  </div>
-  <div class="container" style="margin-top: 2rem; font-size: 0.95rem; opacity: 0.8;">
-    © coast to coast commercial — professional real estate services
   </div>
 </footer>
 
-<!-- tiny note: replace the QR mock with your actual QR image (for business cards) -->
-<!-- simply get a real QR code for https://ms7861.github.io/Ms786.github.io/ and set as background -->
 </body>
 </html>
