Update branding from Coast to Safe Group

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
   
   <!-- SEO Meta Tags -->
-  <title>Coast to Coast Commercial - UK Commercial Property Specialists</title>
-  <meta name="description" content="Coast to Coast Commercial: UK commercial property experts. Offices, retail units, industrial space for sale and to rent across all UK locations. View properties with floor plans and particulars.">
+  <title>Safe Group Commercial - UK Commercial Property Specialists</title>
+  <meta name="description" content="Safe Group Commercial: UK commercial property experts. Offices, retail units, industrial space for sale and to rent across all UK locations. View properties with floor plans and particulars.">
   <meta name="keywords" content="commercial property UK, offices for sale, retail units to rent, industrial space, commercial real estate, property investment, floor plans">
-  <meta name="author" content="Coast to Coast Commercial">
+  <meta name="author" content="Safe Group Commercial">
   <meta name="robots" content="index, follow">
   
   <!-- Open Graph -->
-  <meta property="og:title" content="Coast to Coast Commercial - UK Commercial Property">
+  <meta property="og:title" content="Safe Group Commercial - UK Commercial Property">
   <meta property="og:description" content="Commercial properties for sale and to rent across the United Kingdom">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://coasttocoastcommercial.co.uk">
+  <meta property="og:url" content="https://safegroupcommercial.co.uk">
   
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🏢</text></svg>">
@@ -667,7 +667,7 @@
 <div class="top-header">
   <div class="container header-flex">
     <div class="logo">
-      <h1>COAST TO COAST</h1>
+      <h1>SAFE GROUP</h1>
       <span>COMMERCIAL</span>
     </div>
     <div class="nav">
@@ -749,9 +749,10 @@
 <!-- About Section -->
 <div id="about" class="container">
   <div class="about-section" style="padding: 2rem 0;">
-    <h2>ABOUT COAST TO COAST COMMERCIAL</h2>
-    <p style="margin-top: 1rem;">Coast to Coast Commercial is a premier UK commercial real estate advisory firm, providing exceptional property solutions across every region of the United Kingdom. With a team of experienced surveyors, negotiators and property managers, we offer unrivalled local knowledge combined with national reach.</p>
+    <h2>ABOUT SAFE GROUP COMMERCIAL</h2>
+    <p style="margin-top: 1rem;">Safe Group Commercial is a premier UK commercial real estate advisory firm, providing exceptional property solutions across every region of the United Kingdom. With a team of experienced surveyors, negotiators and property managers, we offer unrivalled local knowledge combined with national reach.</p>
     <p style="margin-top: 1rem;">Our core business encompasses the sale and letting of offices, retail units, industrial spaces and development land across all UK locations. From prime London offices to regional industrial estates, we advise investors, landlords and occupiers with integrity, market insight and professionalism.</p>
+    <p style="margin-top: 1rem;">Contact our team today at <strong>info.safegroupcommercial@gmail.com</strong> for all commercial property enquiries.</p>
   </div>
 </div>
 
@@ -759,7 +760,7 @@
 <div id="contact" class="contact-bar">
   <div class="container contact-bar-content">
     <span>📧 CONTACT OUR COMMERCIAL TEAM:</span>
-    <a href="mailto:info@coasttocoastcommercial.co.uk" class="contact-email">INFO@COASTTOCOASTCOMMERCIAL.CO.UK</a>
+    <a href="mailto:info.safegroupcommercial@gmail.com" class="contact-email">INFO.SAFEGROUPCOMMERCIAL@GMAIL.COM</a>
     <span>📞 020 1234 5678</span>
   </div>
 </div>
@@ -769,7 +770,7 @@
   <div class="container">
     <div class="footer-grid">
       <div class="footer-col">
-        <h4>COAST TO COAST</h4>
+        <h4>SAFE GROUP</h4>
         <a onclick="scrollToSection('about')">ABOUT US</a>
         <a onclick="scrollToSection('contact')">CONTACT</a>
         <a onclick="scrollToSection('locations')">LOCATIONS</a>
@@ -787,12 +788,12 @@
       </div>
       <div class="footer-col">
         <h4>CONTACT</h4>
-        <a href="mailto:info@coasttocoastcommercial.co.uk">EMAIL US</a>
+        <a href="mailto:info.safegroupcommercial@gmail.com">EMAIL US</a>
         <a href="#">020 1234 5678</a>
       </div>
     </div>
     <div class="copyright">
-      © COAST TO COAST COMMERCIAL 2026 · ALL RIGHTS RESERVED
+      © SAFE GROUP COMMERCIAL 2026 · ALL RIGHTS RESERVED · <a href="mailto:info.safegroupcommercial@gmail.com" style="color: #999999;">info.safegroupcommercial@gmail.com</a>
     </div>
   </div>
 </footer>
@@ -1097,7 +1098,7 @@ function openPropertyModal(property) {
       
       <div style="background: #f8faff; padding: 1.5rem; border-radius: 12px; margin-top: 2rem;">
         <h4 style="margin-bottom: 1rem;">Contact us about this property</h4>
-        <a href="mailto:info@coasttocoastcommercial.co.uk?subject=Enquiry%20about%20${property.address}" style="color: #000000; font-weight: 600;">📧 info@coasttocoastcommercial.co.uk</a>
+        <a href="mailto:info.safegroupcommercial@gmail.com?subject=Enquiry%20about%20${encodeURIComponent(property.address)}" style="color: #000000; font-weight: 600;">📧 info.safegroupcommercial@gmail.com</a>
         <p style="margin-top: 0.5rem;">📞 020 1234 5678</p>
       </div>
     </div>
